# tide-naive-static-files

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
examples/: index.html  static-file-endpoint.rs  static-file-function.rs  static-file-server.rs
examples/nested/: page.html
examples/static-example-files/: index.html
examples/static-example-files/nested/: page.html
src/: lib.rs
