[package]
name = "tide-naive-static-files"
version = "0.1.0"
authors = ["eignnx <eignnx@gmail.com>"]
edition = "2018"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.4.0"
http = "0.1.20"
bytes = "0.5.2"
futures-fs = "0.0.5"
futures-util = "0.3.1"
http-service = "0.4.0"
mime = "0.3.14"
mime_guess = "2.0.1"
percent-encoding = "2.1.0"

[dependencies.async-std]
version = "1.2.0"
features = [ "attributes" ]